--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 @font-face {
     font-family: 'Comfortaa';
     src: url(fonts/Comfortaa-VariableFont_wght.ttf);
@@ -7,6 +9,9 @@
     margin:0;
     padding:0;
     font-family:'Comfortaa';
+}
+body {
+    
 }
 
 #header {
@@ -22,16 +27,15 @@
 }
 #header .element {
     display:flex;
-
     width:fit-content;
-    min-width: 14vw;
+    min-width:14vw;
     height: inherit;
     justify-content: center;
     align-items: center;
     justify-self: center;
-    font-size: 3.5vh;
-    padding-left:1vw;
-    padding-right:1vw;
+    font-size: 3.5vmin;
+    padding-left:1vmin;
+    padding-right:1vmin;
     color:rgb(223, 223, 223);
     
     background-color:rgb(67, 63, 73);
@@ -47,30 +51,33 @@
 
 
 #content { 
-    display:flex;
-    padding-top: 7vh;
-    min-height:93vh;
-    align-items: center;
-    justify-content: center;
-
+    display:grid;
+    padding-top:7vh;
+    grid-template-columns: 100vw;
+    grid-template-rows: 93vh;
+    
     background-color:rgb(83, 76, 94);
 }
-#content .t-grid {
-    display: grid;
-    grid-template-columns: 100vw; 
-    grid-template-rows:  calc(40vh + 20px)  calc(40vh + 20px);
-    padding-top:20px;
+#content .descr-row {
+    display: table table-row;
+    width:inherit;
+    
 }
-#content .t-grid .descr-grid {
+
+#content .descr-cell {
+    display:table-cell;
+    vertical-align: middle;
+    text-align: center;
+}
+
+#content .descr-cell .descr-grid {
     display: grid;
-    width:80vw;
-    height:40vh;
-    grid-template-columns: 40vw 40vw;
+    grid-template-columns: 30vw 30vw;
     grid-template-rows: 40vh;
-    align-self: center;
     background-color: rgb(29, 27, 34);
-    margin-top:20px;
-    transition:1s;
+    transition-duration:1s;
+    transition-property: padding;
+    margin-top:20px
 }  
 
 .dg-left {
@@ -82,53 +89,62 @@
 
 .dg-right {
     justify-self: end;
-    
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
+    
 }  
+
+.news {
+    height:50vh;
+}
+
 .dg-left:hover {
     padding-left:5vw;
 }
+
 .dg-right:hover {
     padding-right:5vw;
-} 
-
-#content .t-grid .descr-grid .img-elem {
-    display:block;
-    width: 90%;
-    height: 90%;
-    justify-self: center;
-    align-self: center;
-    box-shadow: 0px 0px 5px 5px rgba(143, 88, 236, 0.596);
-    border-radius: 1vw;
 }
 
-#content .t-grid .descr-grid .txt-elem {
-    display:flex;
+
+.text {
+    background-color: rgb(29, 27, 34);
     color: rgb(160, 152, 207);
     font-size: 4vh;
 }
 
+#content .descr-grid .img-elem {
+    width: 20vw;
+    height: 35vh;
+    justify-self: center;
+    align-self: center;
+    box-shadow: 0px 0px 5px 5px rgba(143, 88, 236, 0.596);
+    background-size:cover;
+    background-position:center;
+    border-radius: 1vw;
+}
+
+#content .descr-grid .txt-elem {
+    color: rgb(160, 152, 207);
+    font-size: 3vmin;
+    justify-self: center;
+    align-self: center;
+
+}
+
 #e1 {
     background: url(img/c1.png) no-repeat;
-    background-size:100%;
 }
 
 
 #e2 {
-    justify-self: flex-end;
-    align-self:center;
-    
 }
 
 #e3 {
     background:url(img/filial.jpg) no-repeat;
-    background-size:cover;
 }
 
 #e4 {
-    justify-self: flex-start;
-    align-self:center;
 }
 
 
@@ -206,12 +222,12 @@
     display:grid;
     grid-template-columns: 40vw;
     grid-template-rows: 5vh 50vh 5vh;
-    width: 40vw;
-    height: 60vh;
     padding-bottom: 3vh;
     padding-top:3vh;
     padding-left:2vw;
     align-items:center;
+    align-self:center;
+    justify-self: center;
     padding-right:2vw;
     border-radius: 3vh;
 
