--- a/style.css
+++ b/style.css
@@ -129,6 +129,131 @@
 #content .t-grid-bg {
     height: calc(84vh + 70px);
 }
+.front-bg {
+    width:fit-content;
+    height:100%;
+    justify-self: center;
+}
+.grid-1x-1y {
+    display:grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 100%;
+}
+.grid-3x-2y {
+    display:grid;
+    width:90%;
+    height:100%;
+    grid-template-columns: 10% 10% 80%;
+    grid-template-rows: 20% 20%;
+}
+input {
+    width:20%;
+    
+    height:fit-content;
+}
+.card-label {
+    width: 60%;
+    height:40%;
+    margin-top:10%;
+    justify-self: center;
+    background-color:rgb(91, 187, 91);
+    border-radius:20px;
+    display:grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 30% 70%;
+}
+.card-type-label {
+    margin-left:5%;
+    font-size: 3em;
+}
+#visa-sys {
+    background-image: url(img/visa.png);
+}
+#master-card-sys {
+    background-image:url(img/master-card.png)
+}
+#mir-sys{
+    background-image:url(img/mir.svg);
+}
+.cardin-label {
+    width:100%;
+    height:2em;
+    justify-self: center;
+    align-self: center;
+}
+
+.grid-col-span-3 {
+    grid-column: span 3;
+}
+
+.cardin-label>input {
+    width:85%;
+    font-size: 2em;
+}
+.null-border {
+    border:0;
+}
+.null-border:focus{
+    outline: none;
+}
+.cardin-label>input:focus {
+    border:0;
+}
+
+.x-center {
+    justify-self: center;
+    justify-content: center;
+}
+.x-left {
+    justify-self: start;
+    justify-content: flex-start;
+}
+.x-right {
+    justify-self: end;
+    justify-content: flex-end;
+}
+.y-top {
+    align-self: start;
+    align-items: flex-start;
+}
+
+.y-bottom {
+    align-self: end;
+    align-items: flex-end;
+}
+.y-center {
+    align-self: center;
+    align-content: center;
+}
+.xy-center {
+    justify-self: center;
+    justify-content: center;
+    align-self: center;
+    align-content: center;
+}
+#incn {
+    padding-left: 5%;
+}
+#incn::placeholder {
+    text-align: left;
+}
+#inmonth {
+    padding-left:2.5%;
+    padding-right:2.5%;
+
+}
+#inyear {
+    padding-left:2.5%;
+    padding-right:2.5%;
+}
+.cardin-label>input::placeholder {
+    text-align: center;
+}
+#incvv {
+    width:20%;
+    justify-self: end;
+    margin-right: 20%
+}
 #content .t-grid {
     display: grid;
     grid-template-columns: 100%; 
@@ -394,6 +519,7 @@
     background: url(img/reg-bg.jpg) no-repeat;
     background-size:cover;
 }
+
 .central-holder {
     display:grid;
     width:60%;
@@ -581,7 +707,9 @@
 .br-d2 {
     border-color: #201f22;
 }
-
+.font-white {
+    color:white;
+}
 .fam-comf {
     font-family: 'Comfortaa';
 }
