--- a/style.css
+++ b/style.css
@@ -45,7 +45,17 @@
     grid-template-columns: 16.5% 16.5% 16.5% 16.5% 16.5% 16.5%;
     grid-template-rows: 4em;
 }
+#logged-header {
+    display:grid;
+    position: fixed;
+    width:100%;
 
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-rows: 4em;
+}
+#prof-case::before {
+    content: "Личный кабинет";
+}
 .element {
     display:flex;
     width:100%;
@@ -82,9 +92,12 @@
     content: 'Index Drive';
 }
 
-@media screen and (max-width:1200px) {
+@media screen and (max-width:1252px) {
     .element {
         font-size:1.5em;
+    }
+    #prof-case::before {
+        content: 'Лич. каб.'
     }
 }
 @media screen and (max-width:892px) {
@@ -409,8 +422,8 @@
 }
 
 .profile-img {
-    width: 80%;
-    height: 80%;
+    width: 10vmax;
+    height: 10vmax;
     border-radius:100%;
     align-self: center;
     justify-self: center;
@@ -422,7 +435,6 @@
     max-width: 60vw;
     max-height: 90vh;
     grid-template-columns: 100%;
-    grid-template-rows: 1.5em 40em 2em;
     border-radius: 20px;
     font-family: 'Nunito';
     padding-left: 70px;
@@ -434,20 +446,31 @@
     justify-self: center;
     text-align: center;
 }
+.singup-rows-template {
+    grid-template-rows: 1.5em 40em 2em;
+}
 
+.singin-rows-template {
+    grid-template-rows: 1.5em 20em 2em;
+}
 
 
 #reg-block>.reg-grid {
     display: flex-box;
     width: 100%;
     height: 100%;
-    max-width: 60vw;
-    max-height: 90vh;
     align-self:start;
     justify-self: left;
 }
 
-#reg-block .reg-grid>.text-cell {
+#reg-block>.login-grid {
+    vertical-align: middle;
+
+    align-self: center;
+    justify-self: center;
+}
+
+#reg-block .text-cell {
     width:fit-content;
     justify-self: right;
     padding-top: 3%;
